--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1709,7 +1709,7 @@ input, select, textarea {
 	.container {
 		margin: 0 auto;
 		max-width: calc(100% - 4.5em);
-		width: 45em;
+		width: 55em;
 	}
 
 		.container.xsmall {
@@ -1795,6 +1795,22 @@ input, select, textarea {
 			font-weight: 700;
 			margin-top: -0.75em;
 		}
+/* Job */
+.job {
+    display: flex;
+    align-items: center; 
+    margin-top: -20px;
+}
+
+.logo {
+    width: 80px; 
+    height: auto; 
+    margin-right: 20px; 
+}
+
+.job-description {
+    flex-grow: 1; /* Allow the job description to grow to fill remaining space */
+}
 
 /* Form */
 
